src/test/ui/issues/issue-54943.stderr
error[E0477]: the type `&'a u32` does not fulfill the required lifetime
  --> $DIR/issue-54943.rs:6:13
   |
LL |     let x = foo::<&'a u32>();
   |             ^^^^^^^^^^^^^^
   |
   = note: type must satisfy the static lifetime

error: aborting due to previous error

